@@ -1,57 +1,129 @@
-UML Diagram Tool
-A simple application to create, save, load, and export UML use case and class diagrams. Supports exporting diagrams as PNG images and JSON files for easy sharing and integration into other tools.
+# UML Diagram Editor
 
-Features
-  Create Use Case and Class Diagrams: Draw and design use case and class diagrams with intuitive UI elements.
-  Save Diagrams: Store your diagrams locally in a native file format.
-  Load Diagrams: Open previously saved diagrams to continue working on them or view existing designs.
-  Export Diagrams:
-  PNG Export: Export diagrams as high-quality PNG images.
-  JSON Export: Export diagrams in JSON format for easy integration with other tools or version control systems.
+A **JavaFX + TypeScript** based desktop tool for creating and editing UML Class Diagrams and Use Case Diagrams.  
+This is our semester project developed as a team, focusing on providing a simple, flexible, and visually appealing diagram-editing experience.
 
-Getting Started
-Prerequisites
-Make sure you have Java JDK (version 8 or later) installed on your system.
-Ensure that you have a compatible Java Development Environment (IDE) like IntelliJ IDEA, Eclipse, or NetBeans.
-Running the Application
+---
 
-Clone the repository:
+## 🚀 Project Overview
 
-bash
-Copy code
-git clone https://github.com/AbdurRehmanMalik1/UML_Diagram_Editor.git
-cd UML-Diagram-Tool
-Build the project: Compile the project using your preferred Java IDE or build tool (e.g., Maven or Gradle).
+The **UML Diagram Editor** allows users to visually design UML diagrams through an intuitive graphical interface.
 
-Run the application: Execute the main class of the application from your IDE or use the terminal:
+It supports:
+- Creating and styling **Class Diagrams**
+- Building **Use Case Diagrams**
+- Drag-and-drop interface for smooth editing
+- Resize, move, update attributes and connections
+- Clean layout and responsive UI elements
+- Exporting and saving diagrams (if implemented in your project)
 
-bash
-Copy code
-java -jar UML-Diagram-Tool.jar
-Usage
-Creating Diagrams:
-Use the toolbar and context menus to add, move, and connect elements like actors, use cases, classes, and relationships.
-Customize diagram properties like colors, fonts, and connections.
-Saving Diagrams:
-To save a diagram, use the 'Save' option in the file menu. You can save the diagram in a native file format (e.g., .uml) for later editing.
-Loading Diagrams:
-To load a previously saved diagram, use the 'Load' option in the file menu. Select the file and the diagram will open for further editing.
-Exporting Diagrams:
-PNG Export: Export the current diagram as a high-quality PNG image by selecting 'Export as PNG' from the file menu.
-JSON Export: Export the current diagram as a JSON file for easy integration with other UML tools or for sharing purposes.
-Features Roadmap
- Add support for more diagram types (e.g., Sequence, State, Activity Diagrams).
- Implement undo/redo functionality.
- Improve diagram element manipulation.
- Add support for exporting diagrams to SVG format.
-Contributing
-We welcome contributions from the community! If you have ideas for improvements, new features, or find bugs, please create an issue or a pull request on our GitHub repository.
+This tool is designed to help students and developers quickly prototype UML diagrams without using heavy paid tools.
 
-License
-This project is licensed under the MIT License. See the LICENSE file for more information.
+---
 
-Contact
-For any questions or feedback, feel free to reach out to us at:
+## 👩‍💻 My Contribution (Hadia Sarwar)
 
-Email: abdurrehman4415@gmail.com
-GitHub: AbdurRehmanMalik1, Hadia-Sarwar 22i 2586, l227861
+I contributed majorly to:
+
+### ✨ Frontend Development
+- JavaFX UI design
+- Visual layout and responsive components
+- Styling, spacing, alignment, modern look
+- 
+
+### 🤝 Team Collaboration
+- Helping combine UI + backend logic
+- Ensuring consistent frontend structure and usability
+
+---
+
+## 📂 Project Structure
+
+A typical structure (your repo may differ):
+
+```
+UML_Diagram_Editor/
+│── src/
+│   ├── main/
+│   │   ├── java/          
+│   │   ├── resources/    
+│── diagrams/            
+│── README.md
+│── pom.xml or build.gradle
+```
+
+---
+
+## ▶️ How to Run the Project
+
+### 1. Install Requirements
+
+Make sure you have:
+- **Java 17 or higher**
+- **JavaFX SDK**
+- **Maven or Gradle** (depending on your build setup)
+- Any IDE such as **IntelliJ**, **VS Code**, or **Eclipse**
+
+### 2. Clone the Repository
+
+```bash
+git clone https://github.com/Hadia-Sarwar/UML_Diagram_Editor
+cd UML_Diagram_Editor
+```
+
+### 3. Configure JavaFX
+
+If running from an IDE:
+- Go to **Project Settings → Libraries**
+- Add **JavaFX SDK**
+- Add VM arguments:
+  ```
+  --module-path "path/to/javafx/lib" --add-modules javafx.controls,javafx.fxml
+  ```
+
+### 4. Build and Run
+
+**If using Maven:**
+```bash
+mvn clean install
+mvn javafx:run
+```
+
+**If running directly from IDE:**
+- Open the `Main` class
+- Click **Run**
+
+---
+
+## 📘 Features Implemented
+
+✔️ Class diagram elements  
+✔️ Use-case diagram elements  
+✔️ Line connectors  
+✔️ Move/resize nodes  
+✔️ Clean UI layout  
+✔️ User-friendly canvas  
+✔️ Responsive and polished frontend  
+
+---
+
+## 👥 Team Project
+
+This project was created as a **collaborative semester project**.  
+All team members worked on integrating UI, backend logic, and diagram functionalities.  
+My focus was majorly on **UI, responsiveness, and frontend interactions**.
+
+---
+
+## 🌟 Future Enhancements
+
+- Export diagram as **PNG/SVG**
+- Auto-arrange diagram layout
+- Real-time collaboration
+- More UML diagram types
+
+---
+
+<p align="center">
+  <i>Built with ❤️ as a semester project</i>
+</p>
